1) First Commit after PILOT 1. I change something in the CSS to prevent a posible prolem in the instructions (happenedonce to smeone with redmi phone). 2) Adapted visibility change and visibility state stuff to overcome rare problems of 'checking in' when it shouldn't. Also I save some logs of it to the data.

--- a/style.css
+++ b/style.css
@@ -806,9 +806,9 @@ h1 {
 
 #repeatOrContinueText {
   position: relative;
-  padding: 6vw;
+  padding: 3vw;
   line-height: normal;
-  font-size: 6vw;
+  font-size: 5.5vw;
   direction: rtl;
 }
 
